--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="red" color="red"></div>
+        <div class="yellow" color="yellow"></div>
+        <div class="green" color="green"></div>
+    </div>
 </body>
 
 </html>
