--- a/index.html
+++ b/index.html
@@ -13,27 +13,34 @@
             box-sizing: border-box;
         }
 
+        .light {
+            border-radius: 100%;
+            border: 10px solid white;
+        }
+
         .red {
             background-color: red;
             width: 33.33%;
-            height: 100%;
+            height: 55%;
         }
 
         .yellow {
             background-color: yellow;
             width: 33.33%;
-            height: 100%;
+            height: 55%;
         }
 
         .green {
             background-color: green;
             width: 33.33%;
-            height: 100%;
+            height: 55%;
         }
 
         .container {
             display: flex;
             height: 100vh;
+            align-items: center;
+            background-color: black;
         }
     </style>
 </head>
