--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
             box-sizing: border-box;
         }
 
-        .light {
-            border-radius: 100%;
-            border: 10px solid white;
+        .apa {
+            maring: 0
         }
 
         .red {
